--- a/index.html
+++ b/index.html
@@ -496,9 +496,9 @@
 
                                     <div>
                                         <span class="projects__subtitle">Salton</span>
-                                        <h1 class="projects__title">My Portfolio</h1>
+                                        <h1 class="projects__title">My To do list</h1>
 
-                                        <a href="" class="projects__button">
+                                        <a href="https://r-salton.github.io/todoList/" class="projects__button">
                                             view demo <i class="fa-solid fa-arrow-right"></i>
                                         </a>
                                     </div>
